Thu Mar 09 10:41:24 2000  Steve Huston  <shuston@riverace.com>

        * ace/NT_Service.(h cpp): Added !defined(ACE_HAS_PHARLAP) to the
          if defined (ACE_HAS_WIN32) to prevent this feature from being
          built on PharLap. Thanks to David Hauck <davidh@realtimeint.com>
          for reporting this and suggesting a fix.

Wed Mar 08 22:19:26 2000  David L. Levine  <levine@cs.wustl.edu>
  
        * include/makeinclude/platform_vxworks5.x_g++.GNU:
          moved VxWorks 5.4 (Tornado II) auto detection to
          before CCFLAGS definition, so that it gets set
          properly.  Thanks to Thomas Lockhart
          <Thomas.Lockhart@jpl.nasa.gov> for reporting this. [Bug 481]

Wed Mar  8 19:16:56 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * tests/Time_Service_Test.cpp (main): Added the ASYS_TEXT macro
          to the "ace-malloc-XXXXXX" string to avoid an error when
          compiled with Unicode.  Thanks to Steve Huston
          <shuston@riverace.com> for reporting this.  This fixes BUGID
          479.

Wed Mar  8 19:19:46 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/config-irix6.x-common.h: Defined ACE_PI_CONTROL_BLOCK_ALIGN_LONGS
          to 2.

Wed Mar  8 15:59:26 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/config-hpux-10.x.h: Defined ACE_PI_CONTROL_BLOCK_ALIGN_LONGS
          to 2.  The alignment computing macros didn't work in this case.
          Thanks to Steve H. for reporting this.

Wed Mar 08 15:26:31 2000  Steve Huston  <shuston@riverace.com>

        * ace/ace-dll.icc: On AIX, the shared lib is now libACE.o and the
          associated archive is libACE.a. Attempting to unify ACE with the
          screwy way AIX does libraries. When the static library gets built,
          it'll be called libACEns.a.

        * tests/vacpp_setup.icc: On AIX, link libACE.a, not libACEshr.a

        * tests/libDLL_Test.icc: New file to build the library required for