@@ -1,3 +1,10 @@
+Thu Mar  9 11:01:34 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
+
+	* ace/Configuration.h: Changed export_config()/import_config() to
+	  be virtual methods so users can change how the config files are
+ 	  implemented.  Thanks to Damien Dufour
+ 	  <damien.dufour@horoquartz.fr> for reporting this.
+
 Thu Mar 09 10:41:24 2000  Steve Huston  <shuston@riverace.com>
 
         * ace/NT_Service.(h cpp): Added !defined(ACE_HAS_PHARLAP) to the
